--- a/guide/06_admin_dashboard.html
+++ b/guide/06_admin_dashboard.html
@@ -4,293 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>RHDC Master Operational Database — Admin Dashboard</title>
-<style>
-  :root {
-    --bg:       #0f172a;
-    --surface:  #1e293b;
-    --border:   #334155;
-    --text:     #f1f5f9;
-    --muted:    #94a3b8;
-    --blue:     #3b82f6;
-    --green:    #10b981;
-    --yellow:   #f59e0b;
-    --pink:     #ec4899;
-    --purple:   #a78bfa;
-    --cyan:     #06b6d4;
-    --red:      #ef4444;
-    --lime:     #84cc16;
-  }
-  * { box-sizing: border-box; margin: 0; padding: 0; }
-  body {
-    background: var(--bg);
-    color: var(--text);
-    font-family: 'Segoe UI', system-ui, sans-serif;
-    min-height: 100vh;
-  }
-
-  /* ── HEADER ── */
-  .header {
-    background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
-    border-bottom: 1px solid var(--border);
-    padding: 18px 32px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .header-left h1 { font-size: 20px; font-weight: 700; color: var(--text); }
-  .header-left p  { font-size: 13px; color: var(--muted); margin-top: 2px; }
-  .badge {
-    background: #16213e;
-    border: 1px solid var(--blue);
-    color: var(--blue);
-    padding: 4px 12px;
-    border-radius: 20px;
-    font-size: 12px;
-    font-weight: 600;
-  }
-  .live-dot {
-    display: inline-block;
-    width: 8px; height: 8px;
-    background: var(--green);
-    border-radius: 50%;
-    margin-right: 6px;
-    animation: pulse 1.5s infinite;
-  }
-  @keyframes pulse {
-    0%,100% { opacity: 1; }
-    50%      { opacity: 0.3; }
-  }
-
-  /* ── NAV TABS ── */
-  .nav {
-    display: flex;
-    gap: 4px;
-    padding: 12px 32px 0;
-    border-bottom: 1px solid var(--border);
-    background: var(--surface);
-    overflow-x: auto;
-  }
-  .nav button {
-    background: none;
-    border: none;
-    color: var(--muted);
-    padding: 10px 18px;
-    font-size: 13px;
-    font-weight: 500;
-    cursor: pointer;
-    border-bottom: 3px solid transparent;
-    transition: all .2s;
-    white-space: nowrap;
-  }
-  .nav button:hover     { color: var(--text); }
-  .nav button.active    { color: var(--blue); border-bottom-color: var(--blue); }
-
-  /* ── MAIN CONTENT ── */
-  .main { padding: 28px 32px; }
-  .tab-pane { display: none; }
-  .tab-pane.active { display: block; }
-
-  /* ── KPI CARDS ── */
-  .kpi-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    gap: 16px;
-    margin-bottom: 28px;
-  }
-  .kpi {
-    background: var(--surface);
-    border: 1px solid var(--border);
-    border-radius: 12px;
-    padding: 20px;
-    position: relative;
-    overflow: hidden;
-  }
-  .kpi::before {
-    content: '';
-    position: absolute;
-    top: 0; left: 0; right: 0;
-    height: 3px;
-    background: var(--accent, var(--blue));
-  }
-  .kpi .icon { font-size: 26px; margin-bottom: 10px; }
-  .kpi .value {
-    font-size: 32px;
-    font-weight: 800;
-    color: var(--accent, var(--blue));
-    line-height: 1;
-  }
-  .kpi .label { font-size: 12px; color: var(--muted); margin-top: 4px; }
-  .kpi .sub   { font-size: 11px; color: var(--muted); margin-top: 8px; }
-
-  /* ── SECTION HEADERS ── */
-  .section-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 16px;
-  }
-  .section-header h2 { font-size: 16px; font-weight: 600; }
-  .section-header .hint { font-size: 12px; color: var(--muted); }
-
-  /* ── TABLES ── */
-  .card {
-    background: var(--surface);
-    border: 1px solid var(--border);
-    border-radius: 12px;
-    overflow: hidden;
-    margin-bottom: 24px;
-  }
-  .card-header {
-    padding: 14px 20px;
-    border-bottom: 1px solid var(--border);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .card-header h3 { font-size: 14px; font-weight: 600; }
-  table { width: 100%; border-collapse: collapse; font-size: 13px; }
-  th {
-    text-align: left;
-    padding: 10px 16px;
-    color: var(--muted);
-    font-size: 11px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: .05em;
-    border-bottom: 1px solid var(--border);
-    background: rgba(0,0,0,.15);
-  }
-  td { padding: 11px 16px; border-bottom: 1px solid rgba(51,65,85,.4); }
-  tr:last-child td { border-bottom: none; }
-  tr:hover td { background: rgba(255,255,255,.025); }
-
-  /* ── STATUS BADGES ── */
-  .badge-status {
-    display: inline-block;
-    padding: 2px 10px;
-    border-radius: 20px;
-    font-size: 11px;
-    font-weight: 600;
-  }
-  .s-accepted     { background: rgba(16,185,129,.15); color: #34d399; }
-  .s-pending      { background: rgba(245,158,11,.15);  color: #fbbf24; }
-  .s-under_review { background: rgba(59,130,246,.15);  color: #60a5fa; }
-  .s-rejected     { background: rgba(239,68,68,.15);   color: #f87171; }
-  .s-flagged      { background: rgba(167,139,250,.15); color: #c4b5fd; }
-  .s-active       { background: rgba(16,185,129,.15);  color: #34d399; }
-  .s-completed    { background: rgba(100,116,139,.15); color: #94a3b8; }
-  .s-upcoming     { background: rgba(245,158,11,.15);  color: #fbbf24; }
-
-  /* ── PROGRESS BARS ── */
-  .progress-wrap { background: var(--border); border-radius: 4px; height: 6px; width: 100px; }
-  .progress-bar  { height: 6px; border-radius: 4px; }
-
-  /* ── GRID 2-COL ── */
-  .grid-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-  .grid-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; }
-
-  /* ── SEARCH ── */
-  .search-bar {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  .search-bar input {
-    flex: 1;
-    background: var(--surface);
-    border: 1px solid var(--border);
-    border-radius: 8px;
-    padding: 9px 14px;
-    color: var(--text);
-    font-size: 13px;
-    outline: none;
-  }
-  .search-bar input:focus { border-color: var(--blue); }
-  .search-bar input::placeholder { color: var(--muted); }
-  .btn {
-    background: var(--blue);
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    padding: 9px 18px;
-    font-size: 13px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: opacity .2s;
-  }
-  .btn:hover { opacity: .85; }
-  .btn-sm { padding: 4px 12px; font-size: 11px; border-radius: 6px; }
-
-  /* ── SCHEMA VIEWER ── */
-  .schema-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 16px;
-  }
-  .schema-card {
-    background: var(--surface);
-    border: 1px solid var(--border);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  .schema-card .sc-header {
-    padding: 10px 14px;
-    font-size: 13px;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-  .schema-card .sc-body { font-size: 12px; }
-  .schema-card .sc-row {
-    padding: 6px 14px;
-    border-top: 1px solid rgba(51,65,85,.4);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 8px;
-  }
-  .sc-pk   { color: #fbbf24; font-weight: 700; }
-  .sc-fk   { color: #6ee7b7; }
-  .sc-type { color: var(--muted); font-size: 11px; }
-
-  /* ── QUERY BOX ── */
-  .query-box {
-    background: #0d1117;
-    border: 1px solid var(--border);
-    border-radius: 10px;
-    padding: 18px;
-    font-family: 'Fira Code', 'Cascadia Code', monospace;
-    font-size: 12px;
-    color: #c9d1d9;
-    line-height: 1.7;
-    white-space: pre;
-    overflow-x: auto;
-    margin-bottom: 16px;
-  }
-  .query-box .kw  { color: #ff7b72; }
-  .query-box .fn  { color: #d2a8ff; }
-  .query-box .str { color: #a5d6ff; }
-  .query-box .cm  { color: #8b949e; }
-
-  /* ── CHART BARS (CSS only) ── */
-  .bar-chart { display: flex; flex-direction: column; gap: 10px; }
-  .bar-row { display: flex; align-items: center; gap: 12px; }
-  .bar-label { width: 140px; font-size: 12px; color: var(--muted); text-align: right; flex-shrink: 0; }
-  .bar-track { flex: 1; background: var(--border); border-radius: 4px; height: 18px; position: relative; }
-  .bar-fill  { height: 18px; border-radius: 4px; display: flex; align-items: center; justify-content: flex-end; padding-right: 8px; font-size: 11px; font-weight: 700; color: #fff; transition: width 1s ease; }
-  .bar-count { width: 36px; font-size: 12px; font-weight: 600; text-align: right; }
-
-  /* ── FOOTER ── */
-  .footer {
-    text-align: center;
-    padding: 24px;
-    color: var(--muted);
-    font-size: 12px;
-    border-top: 1px solid var(--border);
-    margin-top: 20px;
-  }
-</style>
+<link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
 
